# Hacknotts-84

./: .gitignore  CMakeLists.txt  DescrPage.cpp  DescrPage.h  Guide.cpp  Guide.h  MainGame.cpp  MainGame.h  MainMenu.cpp  MainMenu.h  MiniGame.cpp  MiniGame.h  README.md  board.cpp  board.h  button.cpp  button.h  globals.cpp  globals.h  main.cpp  mainEvents.cpp
